name: capabilities-via
version: 0.1.0.0
homepage: https://github.com/tweag/capabilities-via
license: BSD3
license-file: LICENSE
maintainer: andreas.herrmann@tweag.io
copyright: 2018 EURL Tweag
category: Control
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  exposed-modules:
    Accessors
    HasError
    HasReader
    HasReader.Internal.Class
    HasReader.Internal.Instances
    HasState
    HasState.Internal.Class
    HasState.Internal.Instances
    HasStream
    HasWriter
    HasWriter.Discouraged
  build-depends:
      base >=4.10 && <4.13
    , exceptions
    , dlist
    , generic-lens
    , lens
    , monad-control
    , monad-unlift
    , mtl
    , mutable-containers
    , primitive
    , safe-exceptions
    , streaming
    , transformers
    , unliftio
    , unliftio-core
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

test-suite examples
  type: exitcode-stdio-1.0
  other-modules:
    CountLog
    Error
    Reader
    State
    Stream
    Test.Common
    Writer
  main-is: Test.hs
  build-depends:
      base
    , capabilities-via
    , containers
    , hspec
    , hspec-jenkins
    , mtl
    , silently
    , streaming
    , temporary
    , unliftio
  ghc-options: -Wall
  hs-source-dirs: examples
  default-language: Haskell2010
