name: capability
version: 0.1.0.0
homepage: https://github.com/tweag/capability
license: BSD3
license-file: LICENSE
maintainer: andreas.herrmann@tweag.io
copyright: 2018 EURL Tweag
category: Control
build-type: Simple
extra-source-files:
  ChangeLog.md
  CONTRIBUTING.md
  README.md
cabal-version: 1.18
tested-with: GHC==8.6.1
synopsis: Extensional capabilities and deriving combinators
description:
  Standard capability type classes for extensional effects and combinators
  to derive capability instances with little boilerplate.

source-repository head
  type: git
  location: https://github.com/tweag/capability

flag hspec-jenkins
  description:
    You can enable the use of the `hspec-jenkins` package using `-fhspec-jenkins`.
    .
    This package allows JUnit formatted test reporting for CI.
  default: False

library
  exposed-modules:
    Capability
    Capability.Accessors
    Capability.Error
    Capability.Reader
    Capability.Reader.Internal.Class
    Capability.Reader.Internal.Strategies
    Capability.State
    Capability.State.Internal.Class
    Capability.State.Internal.Strategies
    Capability.Stream
    Capability.Writer
    Capability.Writer.Discouraged
  build-depends:
      base >= 4.12 && < 5.0
    , dlist >= 0.8 && < 0.9
    , exceptions >= 0.6 && < 0.11
    , generic-lens >= 1.0 && < 1.1
    , lens >= 4.16 && < 5.0
    , monad-control >= 1.0 && < 1.1
    , monad-unlift >= 0.2 && < 0.3
    , mtl >= 2.0 && < 3.0
    , mutable-containers >= 0.3 && < 0.4
    , primitive >= 0.6 && < 0.7
    , safe-exceptions >= 0.1 && < 0.2
    , streaming >= 0.2 && < 0.3
    , transformers >= 0.5.5 && < 0.6
    , unliftio >= 0.2 && < 0.3
    , unliftio-core >= 0.1 && < 0.2
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

test-suite examples
  type: exitcode-stdio-1.0
  other-modules:
    WordCount
    CountLog
    Error
    Reader
    State
    Stream
    Test.Common
    Writer
  main-is: Test.hs
  build-depends:
      base >= 4.12 && < 5.0
    , capability
    , containers >= 0.6 && < 0.7
    , hspec >= 2.0 && < 3.0
    , lens >= 4.16 && < 5.0
    , mtl >= 2.0 && < 3.0
    , silently >= 1.2 && < 1.3
    , streaming >= 0.2 && < 0.3
    , temporary >= 1.0 && < 1.4
    , text >= 0.2 && < 1.3
    , unliftio >= 0.2 && < 0.3
  if flag(hspec-jenkins)
    build-depends: hspec-jenkins
  ghc-options: -Wall
  hs-source-dirs: examples
  default-language: Haskell2010
